Updated project card to have correct picture for hikingApp

--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,5 +1,6 @@
 .homePage{
-    background-image: url("https://i.imgur.com/haBMi7g.jpg");
+    /* background-image: url("https://i.imgur.com/haBMi7g.jpg"); */
+    background-image: url("./../../images/hikingApp.png");
     background-size: 100% 100%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin: 0;
